[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
cli-table = "0.4.7"
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
